# multiverse-topology-artifacts

./: .gitignore  LICENSE  README.md  pyproject.toml
data/processed/analysis/: metrics_table.csv
data/processed/eval_metrics/: eval_metrics.tar
data/processed/metrics/: metrics.tar
