[project]
name = "project"
version = "0.1.0"
description = "Title"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [ { name = "Anonymous Author", email = "anon@submission.edu" } ]

# Runtime dependencies
dependencies = [
    "torch==2.9.1",
    "numpy>=1.26",
    "gudhi>=3.9.0",
    "typer>=0.12",
    "rich>=13.0",
    "scikit-learn>=1.7.2",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",
    "matplotlib>=3.10.7",
    "pre-commit>=4.5.0",
    "persim>=0.3.8",
    "seaborn>=0.13.2",
]

[project.scripts]
acb = "project.cli:app"
setup = "project.config:app"
plot = "project.plots:app"
analyze = "project.analyses:app"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.uv]
# Not packaging/building: treat as non-installable project
package = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
